--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
       <p>вёрстка сетчатых макетов</p>
       <p>двумерные анимации и интерактивные элементы</p>
       <p>мультимедиа на сайте</p>
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS3k46BFatxF9KaWTwyAINKBYQluwS7RReyEbmAcJCnwCNCk4h2ucsUWU_W9-c4TBe27cU&usqp=CAU">
+      
 
   </main>
   </body>
